typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            41,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:1:1
  |
1 | foo1();
  | ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:2:1
  |
2 | foo1();
  | ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            55,
        ),
        hi: BytePos(
            59,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:3:1
  |
3 | foo1();
  | ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            64,
        ),
        hi: BytePos(
            70,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:4:1
  |
4 | static();
  | ^^^^^^

